--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Have fun creating your portfolio on this template!!! -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <!-- Title: add your Portfolio websites's title here -->
-    <title>[Your name here] | Developer</title>
+    <title>Jaskarn Bhogal | Software Engineer</title>
 
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
@@ -90,13 +90,13 @@ Have fun creating your portfolio on this template!!! -->
       src="https://www.googletagmanager.com/gtag/js?id=UA-122228201-4"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || []
+      window.dataLayer = window.dataLayer || [];
       function gtag() {
-        dataLayer.push(arguments)
+        dataLayer.push(arguments);
       }
-      gtag("js", new Date())
+      gtag("js", new Date());
 
-      gtag("config", "UA-122228201-4")
+      gtag("config", "UA-122228201-4");
     </script>
     <!-- End of Google Analytics -->
   </head>
@@ -105,9 +105,10 @@ Have fun creating your portfolio on this template!!! -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Your Name</span>
+          Hi, my name is
+          <span class="text-color-main name">Jaskarn Bhogal</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Software Developer.
         </h1>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
@@ -129,25 +130,51 @@ Have fun creating your portfolio on this template!!! -->
               class="img-fluid"
               src="./assets/profile.png"
               alt="Profile Image"
-              width="450"
+              width="350"
               height="350"
             />
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              I am a versatile Software Developer passionate about leveraging
+              technology to drive innovation and create impactful solutions.
+              With a background in health science, I bring a unique perspective
+              to my work, with a keen interest in integrating healthcare with
+              the broader realm of software development. While my roots lie in
+              health science, my ambitions extend beyond a single industry. As a
+              full-stack software engineer, adept at tackling diverse challenges
+              across various domains. Whether it's revolutionizing patient care
+              through technology or spearheading projects in other sectors, I
+              thrive on pushing boundaries and exploring new frontiers
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              My goal is to contribute to innovative projects that make a
+              meaningful impact, bridging the gap between technology and
+              real-world solutions. In the dynamic landscape of software
+              engineering, I am driven by the endless possibilities to make a
+              difference. Let's embark on this journey together and build
+              something extraordinary.
             </p>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
+              <div class="social-links">
+                <a
+                  href="https://www.linkedin.com/in/jbhogal/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin"
+                >
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a
+                  href="https://github.com/SinghJB15"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="github"
+                >
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </div>
             </span>
           </div>
         </div>
@@ -164,32 +191,40 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">VitalFlow</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                VitalFlow is a project I built with Express/Node.js and React,
+                allowing users to seamlessly integrate wearable health devices
+                like Fitbit, Apple Watch, and Strava. This platform serves as a
+                centralized destination for users to gather and monitor their
+                health data.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://vitalflow.onrender.com"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a
+                  href="https://github.com/SinghJB15/VitalFlow"
+                  target="_blank"
+                  class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://vitalflow.onrender.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/vitalfow.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -204,32 +239,39 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">HealthHub</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Health Hub is a comprehensive web application I crafted using
+                Express/Node.js and EJS. It empowers users by offering a dynamic
+                platform to explore articles on various health topics and
+                contribute their own insights to the health community.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://health-hub-xc6r.onrender.com"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a
+                  href="https://github.com/SinghJB15/HealthHub"
+                  target="_blank"
+                  class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://health-hub-xc6r.onrender.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/healthhub.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -244,32 +286,38 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">Checkers</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Checkers represents my first venture into web-based game
+                development. Using Javascript, HTML, and CSS, I've recreated the
+                classic 2-player checkers game in a vibrant web application.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://singhjb15.github.io/Checkers/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a
+                  href="https://github.com/SinghJB15/Checkers?tab=readme-ov-file"
+                  target="_blank"
+                  class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a
+                href="https://singhjb15.github.io/Checkers/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/checkers.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -288,10 +336,13 @@ Have fun creating your portfolio on this template!!! -->
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Let's Connect</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a href="#" class="cta-btn cta-btn--resume">Call to Action</a>
+          <a
+            href="mailto:jaskarn.bhogal@gmail.com"
+            class="cta-btn cta-btn--resume"
+            >jaskarn.bhogal@gmail.com</a
+          >
         </div>
       </div>
     </section>
@@ -305,31 +356,7 @@ Have fun creating your portfolio on this template!!! -->
         </a>
         <div class="social-links">
           <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="twitter"
-          >
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="instagram"
-          >
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="codepen"
-          >
-            <i class="fa-brands fa-codepen"></i>
-          </a>
-          <a
-            href="#!"
+            href="https://www.linkedin.com/in/jbhogal/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="linkedin"
@@ -337,7 +364,7 @@ Have fun creating your portfolio on this template!!! -->
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a
-            href="#!"
+            href="https://github.com/SinghJB15"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="github"
@@ -360,7 +387,7 @@ Have fun creating your portfolio on this template!!! -->
     <!-- END Footer Section -->
 
     <script>
-      document.getElementById("year").textContent = new Date().getFullYear()
+      document.getElementById("year").textContent = new Date().getFullYear();
     </script>
     <script src="./javascript/vanilla-tilt.min.js"></script>
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
