--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Have fun creating your portfolio on this template!!! -->
               something extraordinary.
             </p>
             <span class="about-wrapper__cta">
-              <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="https://docs.google.com/document/d/1zwQDm1NCMJ7bz4Fi7eRRFqzNch5fu273Pf7OW7vXg4E/edit?usp=sharing" class="cta-btn cta-btn--resume">View Resume</a>
               <div class="social-links">
                 <a
                   href="https://www.linkedin.com/in/jbhogal/"
