fixed spelling error

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Have fun creating your portfolio on this template!!! -->
               to my work, with a keen interest in integrating healthcare with
               the broader realm of software development. While my roots lie in
               health science, my ambitions extend beyond a single industry. As a
-              full-stack software engineer, adept at tackling diverse challenges
+              full-stack software engineer, I'm adept at tackling diverse challenges
               across various domains. Whether it's revolutionizing patient care
               through technology or spearheading projects in other sectors, I
               thrive on pushing boundaries and exploring new frontiers
