added profile image

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile.png"
+              src="./assets/profile-image.JPEG"
               alt="Profile Image"
               width="350"
               height="350"
