--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile-image.JPEG"
+              src="./assets/profileimage.png"
               alt="Profile Image"
-              width="350"
+              width="300"
               height="350"
             />
           </div>
